Attempt 2 to fix mobile offscreen whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,10 @@ body {
 }
 
 /*Fixed Mobile Overflow*/
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   html, body {
   overflow-x: hidden;
+  width: 100%;
   }
 }
 
